@@ -144,7 +144,7 @@ $("#vboxToolbarButton-vboxPaneToolbar-vmstop").contextMenu({
 		var fn = null;
 		var icon = null;
 		switch(a) {
-			case 'powerdown': fn = 'setStateVMpowerDown'; icon='progress_media_delete_90px.png'; break;
+			case 'powerdown': fn = 'setStateVMpowerDown'; icon='progress_poweroff_90px.png'; break;
 			case 'powerbutton': fn = 'setStateVMpowerButton'; break;
 			case 'sleep': fn = 'setStateVMsleepButton'; break;
 			case 'savestate': fn = 'setStateVMsaveState'; icon='progress_state_save_90px.png'; break;
